--- a/views/insuranceByCollaborativeFiltering.ejs
+++ b/views/insuranceByCollaborativeFiltering.ejs
@@ -45,11 +45,11 @@
                     </div>
                     <div class="stat border">
                         <div class="value">자세히</div>
-                        <div class="type">views</div>
+                        <div class="type">details</div>
                     </div>
                     <div class="stat">
                         <div class="value">가입</div>
-                        <div class="type">buy</div>
+                        <div class="type">sign up</div>
                     </div>
                 </div>
             </div>
@@ -70,11 +70,11 @@
                     </div>
                     <div class="stat border">
                         <div class="value">자세히</div>
-                        <div class="type">views</div>
+                        <div class="type">details</div>
                     </div>
                     <div class="stat">
                         <div class="value">가입</div>
-                        <div class="type">buy</div>
+                        <div class="type">sign up</div>
                     </div>
                 </div>
             </div>
